<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:gravity="center_horizontal"
	android:padding="10px" android:background="#FFFFFF">

	<TextView android:id="@+id/mainBanner" android:layout_width="fill_parent"
		android:textColor="#000000" android:layout_height="wrap_content"
		android:text="@string/app_name" android:textSize="18px"
		android:textStyle="bold" android:gravity="center_horizontal"
		android:layout_marginTop="10px" android:layout_weight="0" />

	<TextView android:id="@+id/mainVersionName"
		android:layout_width="fill_parent" android:textColor="#000000"
		android:layout_height="wrap_content" android:textSize="12px"
		android:gravity="center_horizontal" android:layout_weight="0"
		android:textStyle="italic" android:layout_marginBottom="10px" />

	<TextView android:id="@+id/mainByLine" android:layout_width="fill_parent"
		android:textColor="#000000" android:layout_height="wrap_content"
		android:text="@string/app_by_line" android:textSize="12px"
		android:textStyle="bold" android:gravity="center_horizontal"
		android:layout_marginBottom="10px" android:layout_weight="0" />

	<TableLayout android:id="@+id/mainStatusRow"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:gravity="bottom" android:layout_weight="0">
		<TableRow android:layout_width="fill_parent" android:gravity="center_vertical"
			android:layout_height="50px">

			<ToggleButton android:id="@+id/mainActivatorButton"
				android:layout_width="0px" android:layout_weight="1"
				android:layout_height="fill_parent" android:checked="true"
				android:enabled="false" android:layout_margin="10px"
				android:disabledAlpha="0.5" android:textOn="@string/disabledOff"
				android:textOff="@string/disabledOn" />

			<Button android:id="@+id/mainStatusButton"
				android:layout_height="fill_parent" android:enabled="false"
				android:layout_margin="10px" android:layout_width="0px"
				android:layout_weight="1" android:disabledAlpha="0.5"
				android:text="@string/checkStatus" />

		</TableRow>
	</TableLayout>

	<TextView android:id="@+id/mainStatus" android:layout_width="fill_parent"
		android:textColor="#000000" android:layout_height="wrap_content"
		android:textSize="12px" android:gravity="center_horizontal"
		android:layout_weight="0" android:layout_margin="10px" />

	<TableLayout android:id="@+id/mainFunctionRow"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:gravity="bottom" android:layout_weight="0">
		<TableRow android:layout_width="fill_parent" android:gravity="center_horizontal"
			android:layout_height="50px">

			<Button android:id="@+id/mainCheckinButton"
				android:layout_width="0px" android:layout_weight="1"
				android:layout_height="fill_parent" android:enabled="false"
				android:layout_margin="10px" android:disabledAlpha="0.5"
				android:text="@string/checkin" />

			<ToggleButton android:id="@+id/mainPingerButton"
				android:layout_width="0px" android:layout_weight="1"
				android:layout_height="fill_parent" android:checked="false"
				android:enabled="false" android:layout_margin="10px"
				android:disabledAlpha="0.5" android:textOn="@string/pingingOn"
				android:textOff="@string/pingingOff" />

		</TableRow>
	</TableLayout>

	<TextView android:id="@+id/mainLastLocationCoords"
		android:layout_width="fill_parent" android:textColor="#000000"
		android:layout_height="wrap_content" android:textSize="14px"
		android:textStyle="bold" android:gravity="center_horizontal"
		android:layout_weight="0" android:visibility="invisible" />

	<TextView android:id="@+id/mainLastLocationTime"
		android:layout_width="fill_parent" android:textColor="#000000"
		android:layout_height="wrap_content" android:textSize="12px"
		android:gravity="center_horizontal" android:layout_weight="0"
		android:textStyle="italic" android:visibility="invisible" />

</LinearLayout>
